# viki.ai

./: .gitignore  EXCEPTION_PROPAGATION_FIX.md  README.md  index.html  install.sh  sampledata.rest  test_exception_propagation.py
db/:  flyway.conf  flyway.conf  install.sh
db/sql/: V1__init.sql
service/: install.sh  setup.sh
service/viki_ai/: __main__.py  pyproject.toml  sampledata.rest
service/viki_ai/app/apis/: __init__.py  agent.py  chat.py  fileStore.py  knowledge.py  llm.py  lookup.py  tool.py
service/viki_ai/app/models/: __init__.py  agent.py  chat.py  fileStore.py  knowledge.py  llm.py  lookup.py  tool.py
service/viki_ai/app/schemas/: agent.py  chat.py  fileStore.py  knowledge.py  knowledge_new.py  llm.py  lookup.py  tool.py
service/viki_ai/app/utils/: config.py  database.py  flyway.py  inference.py  logs.py  mcpTool.py  proxy.py
