[project]
name = "viki-ai"
version = "0.0.1"
description = "Agent platform for intelligent actions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.14",
    "langchain>=0.3.26",
    "langchain-mcp-adapters>=0.1.8",
    "mcp[cli]>=1.10.1",
    "pydantic>=2.11.7",
    "pyfiglet>=1.0.3",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.30.0",
]
