[project]
name = "viki-ai"
version = "0.0.1"
description = "Agent platform for intelligent actions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arize-phoenix>=11.4.0",
    "fastapi>=0.115.14",
    "langchain>=0.3.26",
    "langchain-anthropic>=0.3.17",
    "langchain-aws>=0.2.27",
    "langchain-azure-ai>=0.1.4",
    "langchain-cerebras>=0.5.0",
    "langchain-groq>=0.3.5",
    "langchain-huggingface>=0.3.0",
    "langchain-mcp-adapters>=0.1.8",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.1",
    "mcp[cli]>=1.10.1",
    "openinference-instrumentation-langchain>=0.1.46",
    "pydantic>=2.11.7",
    "pyfiglet>=1.0.3",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.30.0",
]
